fixed css issue on mobiles and made dev server local network wide

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,11 +1,12 @@
 .content{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
+    overflow: hidden;
 }
 .page{
     @include with-theme('background', 'color-background');
     @include with-theme('color', 'color-text');
     @include with-theme('font-weight', 'font-weight');
-    
+    height: 100%;
 }
